@@ -1,18 +1,19 @@
-(defproject tupelo-datomic "0.9.4"
+(defproject io.tupelo/datomic "0.9.4"
   :description "Tupelo Datomic:  Datomic With A Spoonful of Honey"
-  :url "http://github.com/cloojure/tupelo-datomic"
+  :url "https://github.com/io-tupelo/datomic"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [ [cheshire "5.8.1"]
-                 [danlentz/clj-uuid "0.1.7"]
+  :dependencies [
+                 [cheshire "5.9.0"]
+                 [danlentz/clj-uuid "0.1.9"]
                  [enlive "1.1.6"]
-                 [org.clojure/clojure "1.10.0"]
+                 [org.clojure/clojure "1.10.1"]
                  [org.clojure/data.xml "0.2.0-alpha5"]
                  [org.clojure/spec.alpha "0.2.176"]
-                 [org.clojure/test.check "0.9.0"]
+                 [org.clojure/test.check "0.10.0"]
                  ;[org.clojure/tools.logging "0.4.0"]
-                 [prismatic/schema "1.1.10"]
-                 [tupelo "0.9.128"]
+                 [prismatic/schema "1.1.12"]
+                 [tupelo "0.9.182"]
                  ]
   :resource-paths ["resources/"
                    "resources/datomic-free-0.9.5661-everything.jar"
@@ -26,14 +27,17 @@
 ; :repositories {"my.datomic.com" {:url "https://my.datomic.com/repo"
 ;                                  :creds :gpg}}
 
-  :plugins  [ [lein-codox "0.10.3"] ]
-  :codox {:src-dir-uri "http://github.com/cloojure/tupelo-datomic/blob/master/"
-          :src-linenum-anchor-prefix "L"}
+  ;:plugins  [ [lein-codox "0.10.7"] ]
+  ;:codox {:src-dir-uri "http://github.com/cloojure/tupelo-datomic/blob/master/"
+  ;        :src-linenum-anchor-prefix "L"}
+
   :deploy-repositories {  "snapshots" :clojars
                           "releases"  :clojars 
                           :sign-releases false }
+
   :update :daily ;  :always
 ; :main ^:skip-aot tupelo-datomic.core
+
   :target-path "target/%s"
   :clean-targets [ "target" ]
 
@@ -44,7 +48,5 @@
                     :slow       :slow }
 
   :jvm-opts ["-Xms500m" "-Xmx2g"
-            ;"--add-modules" "java.xml.bind"
-            ;"-server"
             ]
 )
